# sampledjango

./: db.sqlite3  pyproject.toml
app/: settings.py  urls.py
board/: models.py  urls.py  views.py
board/migrations/: 0001_initial.py
list/: pyvenv.cfg
