[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["ahnsangwon <imeands@onomaai.mail.kakaowork.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
djangorestframework = "^3.15.1"
ruff = "^0.3.4"
psycopg2-binary = "^2.9.9"
django-redis = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
